version final (correction mobile 3)

--- a/mobile.css
+++ b/mobile.css
@@ -352,9 +352,10 @@ h2 {
 
 .barreRecherche,
 button {
-    padding: 12px;
+    padding:10px;
     font-size: 15px;
     border: black 0px solid;
+    
 }
 
 button {
